2005-12-04  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Bump to 0.10, added fr translation to ALL_LINGUAS

	* banshee.mdp: Updated MonoDevelop project

	* docs/*: Updated API docs

	* entagged-sharp/Tag.cs: minor fix
	
	* libbanshee/gst-misc.c: Added gstreamer_initialize from gst-init.c; 
	added new gstreamer_detect_mimetype function
	
	* libbanshee/gst-misc.h: Added gstreamer_initialize, 
	gstreamer_detect_mimetype
	
	* libbanshee/Makefile.am: Removed gst-init.c/gst-init.h
	
	* libbanshee/gst-init.[ch]: Removed, gstreamer_initialize moved 
	to gst-misc.c
	
	* libbanshee/gst-player-engine.c:
	* libbanshee/gst-encode.c: 
	* libbanshee/cd-rip.c: Include gst-misc.h instead of gst-init.h

	* src/Makefile.am: update icon resources; build Banshee.Widgets before
	Banshee.Base; removed ThemeIcons.cs, GstMisc.cs (now in Banshee.Base),
	use $(top_builddir) instead of $(srcdir)../ for resources

	* src/PlaylistModel.cs: removed ImportCanUpdate; now handled by PlayerUI;
	removed LibraryLoadTransaction/FileLoadTransaction

	* src/PlayerInterface.cs: Removed old FileLoadTransaction method of
	importing to library; using new ImportManager - fixed BGO #314965, #318330;
	only show newly imported songs in the view if in library view; only add 
	newly imported songs to library view if no search is active or the 
	new song matches the current search; minor fixes to OnSimpleSearch; 
	moved search matching to separate method: DoesTrackMatchSearch - 
	fixed BGO #316102; use new IconThemeUtils for loading icons from the 
	icon theme where applicable; fixed BGO #323202

	* src/LibraryTrackInfo.cs: Use Gstreamer.DetectMimeType to parse mime-type;
	set the mimetype field to Entagged.AudioFile.MimeType property; mime-type
	is now saved to the database

	* src/StockIcons.cs: Renamed applicable icons to the proper icon theme name

	* src/Core.cs (Shutdown): Call Banshee.Dap.DapCore.Dispose()
	
	* src/AboutBox.cs:
	* src/BurnCore.cs:
	* src/Dialogs.cs:
	* src/LogCoreViewer.cs: